# ROD-Database-Toolkit---Echoes-of-Aincrad

./: .gitignore  APIRouting.md  DESIGN.md  LICENSE  README.md  TRANSCRIPT.md  index.html  package-lock.json  package.json  serve.py  server.js
api/: routes.js
builtin/: manifest.json
guides/: brief-understanding-of-pak-ucas-utoc.md  generating-aes-key-and-mapping-files.md  getting-started-installing-unreal-engine.md  initial-project-packaged-build-in-unreal-engine.md  manifest.json  (+3 more)
rodschema/: .gitmodules  CMakeLists.txt  README.md  build.ps1  build_timing.json  enabled.txt  signatures.json  tools_sync_signatures.py  version.h
rodschema/assets/examples/ExampleWeaponSwap/: metadata.json
rodschema/assets/examples/NewItems/: metadata.json
rodschema/assets/examples/NewItems/items/: UsableItems.json
rodschema/assets/schemas/: items.schema.json  weapons.schema.json
rodschema/include/Loader/: RODMainLoader.h  RODModLoaderBase.h  RODRawTableLoader.h  RODWeaponModLoader.h
rodschema/include/SDK/: RODSignatures.h
rodschema/include/SDK/Structs/: FManagedStruct.h
rodschema/include/Utility/: Config.h  JsonHelpers.h  Logging.h  PropertyHelper.h  RODDataTableRegistry.h
rodschema/mods/ExampleWeaponSwap/weapons/: OneHandedSword.json
rodschema/src/: dllmain.cpp
rodschema/src/Loader/: RODMainLoader.cpp  RODModLoaderBase.cpp  RODRawTableLoader.cpp  RODWeaponModLoader.cpp
rodschema/src/SDK/: RODSignatures.cpp
rodschema/src/SDK/Structs/: FManagedStruct.cpp
rodschema/src/Utility/: Config.cpp  JsonHelpers.cpp  PropertyHelper.cpp  RODDataTableRegistry.cpp
(+90 files in other folders)
